# ECE454_UT

./: .gitignore  CMakeLists.txt  implementation.c  sensor_values.csv  sensor_values_non_competitive.csv
lab2/: implementation.c  sensor_values.csv
lab3/assn/: CMakeLists.txt  mm.c
lab4/: report.txt
lab4/allocators/alloc/: alloc.c
lab5/: Makefile  Makefile.include  ggBoard.h  ggBoardPool.c  ggBoardPool.h  ggHashLife.c  ggHashLife.h  ggHashTable.c  ggHashTable.h  ggQuadTree.c  ggQuadTree.h  ggTypes.h  life.c  lifemt.c  lifemt.h  lifeseq.c  util.h
lab5/src/: Makefile  life.c  life.h  lifemt.c  lifemt.h  lifeseq.c  teamInfo.txt
